--- a/templates/sentinel.conf.j2
+++ b/templates/sentinel.conf.j2
@@ -1,11 +1,11 @@
 port {{ sentinel_port }}
-sentinel monitor {{ master_name }} {{ redis_master }} {{ redis_port }} {{ quorum }}
-sentinel down-after-milliseconds {{ master_name }} 5000
-sentinel failover-timeout {{ master_name }} 30000
-sentinel parallel-syncs {{ master_name }} 1
+sentinel monitor {{ primary_name }} {{ redis_primary }} {{ redis_port }} {{ quorum }}
+sentinel down-after-milliseconds {{ primary_name }} 5000
+sentinel failover-timeout {{ primary_name }} 30000
+sentinel parallel-syncs {{ primary_name }} 1
 
-{% if master_password != None %}
-sentinel auth-pass {{ master_name }} {{ master_password }}
+{% if primary_password != None %}
+sentinel auth-pass {{ primary_name }} {{ primary_password }}
 {% endif %}
 requirepass {{ sentinel_password }}
 
